# medicalbot

./: .dockerignore  .env.example  .gitignore  DATABASE_INFO.md  DEPLOY_FIXES.md  Dockerfile  Dockerfile.ultra-minimal  EMERGENCY_DEPLOY.md  RAILWAY_SETUP.md  README.md  database_complete.py  env.example  main.py  pyproject.toml  railway.json  requirements-emergency.txt  requirements-minimal.txt  requirements-ultra-minimal.txt  requirements.txt  supabase_data.sql  supabase_indexes.sql  supabase_schema.sql  supabase_simple.sql  tasks.md  БЫСТРЫЙ_СТАРТ_БД.md
config/: settings.py
memory-bank/: progress.md
memory-bank/reflection/: reflection-webhook-race-condition.md
src/ai/: __init__.py  analyzer.py  prompts.py
src/api/: __init__.py  webapp.py
src/bot/: __init__.py  bot.py  handlers.py
src/database/: __init__.py  client.py  repositories.py
src/file_processing/: __init__.py  ocr.py  processor.py  storage.py
src/models/: __init__.py  analysis.py  biomarker.py  medical_norm.py  recommendation.py  user.py
src/utils/: __init__.py  logging_config.py  medical_data.py
tests/: __init__.py
